// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThirdPartyAuthAlert should match login page third party auth alert message snapshot 1`] = `
<div
  className="fade alert-content alert-warning mt-n2 alert show"
  id="tpa-alert"
  role="alert"
>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      <span>
        You have successfully signed into Google, but your Google account does not have a linked edX account. To link your accounts, sign in now using your edX password.
      </span>
    </div>
  </div>
</div>
`;

exports[`ThirdPartyAuthAlert should match register page third party auth alert message snapshot 1`] = `
<div
  className="fade alert-content alert-warning mt-n2 alert show"
  id="tpa-alert"
  role="alert"
>
  <div
    className="pgn__alert-message-wrapper"
  >
    <div
      className="alert-message-content"
    >
      <span>
        You've successfully signed into Google. We just need a little more information before you start learning with edX.
      </span>
    </div>
  </div>
</div>
`;
